--- a/assets/css/override-bootstrap.css
+++ b/assets/css/override-bootstrap.css
@@ -1,9 +1,9 @@
 :root {
-    --primary: #ff8264;
+    --primary: #ffbd59;
     --secondary: #ffaa64;
     --success: #28a745;
     --danger: #dc3545;
-    --warning: #fd7e14;
+    --warning: #ffbd59;
     --info: #17a2b8;
     --light: #f8f9fa;
     --dark: #343a40;
@@ -21,7 +21,7 @@
     --bs-btn-hover-border-color: var(--secondary);
     --bs-btn-focus-shadow-rgb: 49,132,253;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #ff8e31;
+    --bs-btn-active-bg: #ffbd59;
     --bs-btn-active-border-color: var(--secondary);
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
